Fix sizing on mobile browsers

--- a/docs/style.css
+++ b/docs/style.css
@@ -701,8 +701,8 @@ table {
 }
 
 .lineups {
-    th {
-        min-width: 170px;
+    table {
+        width: 1500px;
     }
 
     p {
